--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css" /><!-- リセット　-->
-    <link rel="stylesheet" href="https://use.typekit.net/uln5qvy.css">
+    <link rel="stylesheet" href="https://use.typekit.net/exk1rfx.css">
     <script src="https://unpkg.com/split-type"></script>
 </head>
 
 <body>
+    <header>
 
+    </header>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
