--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 </head>
 
 <body>
-    <header>
-
+    <header class="l-header">
+        <div class="l-header__logo">
+            <h1>SATOH TOMOYA</h1>
+        </div>
+        <div class="c-menu l-menu"><span></span><span></span><span></span></div>
     </header>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
