--- a/index.html
+++ b/index.html
@@ -13,12 +13,110 @@
 </head>
 
 <body>
-    <header class="l-header">
+    <!-- header -->
+    <header class="l-header c-inner">
         <div class="l-header__logo">
             <h1>SATOH TOMOYA</h1>
         </div>
         <div class="c-menu l-menu"><span></span><span></span><span></span></div>
     </header>
+    <!-- /header -->
+
+    <!-- main -->
+    <main>
+        <div class="p-mainvisual"></div>
+
+        <h3 class="c-font__h3 c-center c-margin__80x c-en u-yellow">
+            WELCO<span>M</span>E<br><span>T</span>O<br>M<span>Y</span> PORTF<span>O</span>LIO</h3>
+
+        <section class="p-about c-inner c-margin__40b">
+            <div class="p-about__content">
+                <img src="img/satohtomota2.jpg">
+                <div class="c-font__p">
+                    <p>
+                        新しいことにチャレンジする。<br>
+                        常に期待以上を目指す。<br>
+                        人を大切にする。<br>
+
+                        「期待」と「不安」の間にいるこの瞬間が一番生きていると感じるようになりました。<br>
+
+                        今の自分よりさらに新しい自分へ、<br>
+                        その思いで日々、<br>
+                        クリエイティブスキルを磨いています。<br>
+                    </p>
+                </div>
+            </div>
+            <div class="p-about__title">
+                <h2 class="c-font__h2 c-en u-yellow u-vertical-rl">A<span>B</span>OUT</h2>
+            </div>
+        </section>
+        <section class="p-works c-inner">
+            <div class="p-works__title">
+                <h2 class="c-font__h2 c-en u-yellow u-vertical-rl">W<span>O</span>RKS</h2>
+                <div class="p-works__ring">
+                    <img src="img/ring.png">
+                </div>
+            </div>
+            <article class="p-works__content c-font__p">
+                <div class="p-works__item">
+                    <img src="img/dummy.png">
+                    <p>テキストテキストテキストテキストテキスト</p>
+                </div>
+                <div class="p-works__item">
+                    <img src="img/dummy.png">
+                    <p>テキストテキストテキストテキストテキスト</p>
+                </div>
+            </article>
+        </section>
+        <section class="p-skill c-inner">
+            <div class="p-skill__title c-center">
+                <h2 class="c-font__h2 c-en u-yellow">S<span>K</span>ILL</h2>
+                <h3 class="c-font__h3 c-en u-yellow">STR<span>O</span>NG P<span>O</span>INT</h3>
+            </div>
+            <div class="p-skill__content">
+                <div class="p-skill__item">
+                    <div class="p-skill__itemTitle">
+                        <span>1</span>
+                        <h4>新しい技術へのチャレンジ</h4>
+                    </div>
+                    <p>
+                        WEB制作を中心に学習を重ね、現在に至ります。今後React.jsやNext.jsなどのjavascriptのフレームワークについて学んでいき、WEB制作での幅を広げていくのが目標です。はじめてWEBサイトを一から作成できた感動大切にして、今後の制作に努めていければと考えております。
+                        【使用ツールと使用歴】<br>
+                        Web制作 [CSS、HTML、javascript、WordPress]（1年）<br>
+                        Jamstack [React] （現在勉強中）<br>
+                        Illustrator、Photoshop（1年）<br>
+                        Web・UIデザイン （1年）<br>
+                        Lステップ構築(1年)
+                    </p>
+                </div>
+                <div class="p-skill__item">
+                    <div class="p-skill__itemTitle">
+                        <span>2</span>
+                        <h4>他業種でのリーダー経験</h4>
+                    </div>
+                    <p>
+                        現在に至るまで、約5年間携帯事業に勤めており、そのうちの2年間はリーダーとして現場スタッフへの教育や店舗目標への達成立案などを行いました。特に達成立案に関しては、現状の問題点を鑑みた上での多角的な視点での解決案を何度も提案しましたが、「前例がない」という理由でそのほとんどが却下となってしまいました。前職での心残りがあるとすれば、根本的な課題解決がなされない環境を改善することができなかったことです。
+                    </p>
+                </div>
+                <div class="p-skill__item">
+                    <div class="p-skill__itemTitle">
+                        <span>1</span>
+                        <h4>新しい技術へのチャレンジ</h4>
+                    </div>
+                    <p>
+                        WEB制作を中心に学習を重ね、現在に至ります。今後React.jsやNext.jsなどのjavascriptのフレームワークについて学んでいき、WEB制作での幅を広げていくのが目標です。はじめてWEBサイトを一から作成できた感動大切にして、今後の制作に努めていければと考えております。
+                        【使用ツールと使用歴】<br>
+                        Web制作 [CSS、HTML、javascript、WordPress]（1年）<br>
+                        Jamstack [React] （現在勉強中）<br>
+                        Illustrator、Photoshop（1年）<br>
+                        Web・UIデザイン （1年）<br>
+                        Lステップ構築(1年)
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- /main -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
