html css javascript 完了

--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
         <div class="l-header__logo">
             <h1 class="c-font__h1">SATOH TOMOYA</h1>
         </div>
-        <div class="c-menu l-menu">
-            <div class="p-menu">
-
-            </div>
-        </div>
-        <div class="l-header__rinkPC c-en">
-            <a href="">ABOUT</a>
-            <a href="">WORKS</a>
-            <a href="">SKILL</a>
-            <a href="">CONTACT</a>
+        <div class="c-menu l-menu"></div>
+        <div class="p-menu">
+            <ul class="p-menu__content c-en">
+                <li><a href="">ABOUT</a></li>
+                <li><a href="">WORKS</a></li>
+                <li><a href="">SKILL</a></li>
+                <li><a href="">CONTACT</a></li>
+            </ul>
         </div>
     </header>
     <!-- /header -->
