--- a/single.html
+++ b/single.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SATOH TOMOYA</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css" /><!-- リセット　-->
     <link rel="stylesheet" href="https://use.typekit.net/exk1rfx.css">
@@ -19,11 +19,13 @@
             <h1 class="c-font__h1">SATOH TOMOYA</h1>
         </div>
         <div class="c-menu l-menu"></div>
-        <div class="l-header__rinkPC c-en">
-            <a href="">ABOUT</a>
-            <a href="">WORKS</a>
-            <a href="">SKILL</a>
-            <a href="">CONTACT</a>
+        <div class="p-menu">
+            <ul class="p-menu__content c-en">
+                <li><a href="">ABOUT</a></li>
+                <li><a href="">WORKS</a></li>
+                <li><a href="">SKILL</a></li>
+                <li><a href="">CONTACT</a></li>
+            </ul>
         </div>
     </header>
     <!-- /header -->
